--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler deploy --minify src/index.ts",
-    "build": "esbuild src/index.ts --bundle --loader:.gif=dataurl --loader:.png=dataurl --platform=neutral --outfile=index.js"
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy --minify",
+    "build": "esbuild src/index.ts --bundle --loader:.gif=dataurl --loader:.png=dataurl --platform=neutral --outfile=dist/index.js"
   },
   "dependencies": {
     "hono": "^3.9.2"
