--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "0.1.0",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
@@ -9,6 +10,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231025.0",
+    "esbuild": "^0.19.5",
     "wrangler": "^3.15.0"
   }
 }
